# garlemlia-project

./: .gitignore  Cargo.toml  README.md  kademlia_nodes.json  kademlia_nodes_empty.json  kademlia_nodes_realistic.json  nodes.json  test_nodes.json
BAD STUPID SIMULATOR/kademlia-simulator/: Cargo.toml
BAD STUPID SIMULATOR/kademlia-simulator/src/: lib.rs
garlemlia/: Cargo.toml
garlemlia-files/: Cargo.toml
garlemlia-simulator/: Cargo.toml
garlemlia-simulator/src/: lib.rs
garlemlia-simulator/tests/: simulator_tests.rs
garlemlia-structs/: Cargo.toml
garlemlia-structs/src/: lib.rs
garlemlia/src/: file_utils.rs  garlemlia.rs  garlemlia_structs.rs  garlic_cast.rs  lib.rs  time_hash.rs
garlemlia/src/file_utils/: garlemlia_files.rs
garlemlia/src/garlemlia/: garlemlia.rs
garlemlia/src/garlemlia_structs/: garlemlia_structs.rs
garlemlia/src/garlic_cast/: garlic_cast.rs
garlemlia/src/simulator/: simulator.rs
garlemlia/src/time_hash/: time_based_hash.rs
garlemlia/tests/: garlemlia_tests.rs
garlic-cast/: Cargo.toml
garlic-cast/src/: lib.rs
garlic-cast/tests/: garlic_cast_tests.rs
kademlia/: Cargo.toml
kademlia-simulator/: Cargo.toml
kademlia-simulator/src/: lib.rs
kademlia-structs/: Cargo.toml
kademlia-structs/src/: lib.rs
kademlia/src/: lib.rs
python-visualizations/: forward_history.txt  garlemlia_sim_output.txt  get_average_routing_table.py  get_proxy_path.py  process_discovery_data.py  run_visualizations.py  tree.py
python-visualizations/discovery_data/: 0_0.txt  0_1.txt  0_10.txt  0_11.txt  0_12.txt  0_13.txt  0_14.txt  0_15.txt  0_16.txt  0_17.txt  0_18.txt  0_19.txt  0_2.txt  0_20.txt  0_21.txt  0_22.txt  0_23.txt  0_24.txt  0_25.txt  0_26.txt  0_27.txt  0_28.txt  0_29.txt  0_3.txt  0_30.txt  0_31.txt  0_32.txt  0_33.txt  0_34.txt  0_35.txt  0_36.txt  0_37.txt  0_38.txt  0_39.txt  0_4.txt  0_40.txt  0_41.txt  0_42.txt  0_43.txt  0_44.txt  (+460 more)
python-visualizations/discovery_data_2/: 0_0.txt  0_1.txt  0_10.txt  0_11.txt  0_12.txt  0_13.txt  0_14.txt  0_15.txt  0_16.txt  0_17.txt  0_18.txt  0_19.txt  0_2.txt  0_20.txt  0_21.txt  0_22.txt  0_23.txt  0_24.txt  0_25.txt  0_26.txt  0_27.txt  0_28.txt  0_29.txt  0_3.txt  0_30.txt  0_31.txt  0_32.txt  0_33.txt  0_34.txt  0_35.txt  0_36.txt  0_37.txt  0_38.txt  0_39.txt  0_4.txt  0_40.txt  0_41.txt  0_42.txt  0_43.txt  0_44.txt  (+460 more)
src/: main.rs
tests/: file_tests.rs  garlemlia_tests.rs  gc_tests.rs  hash_tests.rs  project_tests.rs  simulator_tests.rs
time-based-hash/: Cargo.toml
