[package]
name = "garlemlia-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
garlemlia = { path = "../garlemlia" }
garlemlia-structs = { path = "../garlemlia-structs" }
garlic-cast = { path = "../garlic-cast" }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
async-trait = "0.1.86"
rand = "0.9.0"
lazy_static = "1.5.0"
once_cell = "1.20.3"
chrono = "0.4.40"