[package]
name = "garlemlia-structs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.9.0"
async-trait = "0.1.86"
chrono = { version = "0.4.40", features = ["serde"] }