[package]
name = "garlemlia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
rand = { version = "0.9.0", features = ["std"] }
rand_core = "0.6.4"
async-trait = "0.1.87"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
rsa = { version = "0.9.8", features = ["sha2"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
bincode = "1.3.3"
cipher = "0.4.4"
lazy_static = "1.5.0"
once_cell = "1.21.0"
serde_json = "1.0.140"
reed-solomon-erasure = "6.0.0"
primitive-types = { version = "0.13.1", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"