[package]
name = "garlic-cast"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
tokio = "1.43.0"
garlemlia-structs = { path = "../garlemlia-structs" }
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
reed-solomon-erasure = "6.0.0"
bincode = "1.3.3"
aes = "0.8.4"
cipher = { version = "0.4.4", features = ["block-padding"] }
