[package]
name = "kademlia-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
kademlia = { path = "../kademlia" }
kademlia-structs = { path = "../kademlia-structs" }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.9.0"
lazy_static = "1.5.0"
async-trait = "0.1.86"